2002-05-07  Christian Meyer  <chrisime@gnome.org>

	* db/common.php: Update from Manuel so that a line breaks after 40
	                 characters.

2002-03-25  Christian Meyer  <chrisime@gnome.org>

	* db/*.php: Added. That's our new translation database.
                    Before changing anything contact Manuel Borchers
                    <webmaster@matronix.de> or me.

2002-03-25  Christian Meyer  <chrisime@gnome.org>

	* admin/gnome2.html: Added. Page about compiling GNOME 2.0
	* admin/packages.html: Added.

2001-06-19  Karl Eichwalder  <ke@suse.de>

	* docs/gnome-de.sgml: Zoom issues.

2001-06-10  Karl Eichwalder  <ke@suse.de>

	* docs/gnome-de.sgml: Fix syntax.
	* More on "zoom".

2001-04-11  Christian Meyer  <chrisime@gnome.org>

	* admin/translator-list: Updated translation list.

2001-03-30  Christian Meyer  <chrisime@gnome.org>

	* admin/translator-list: Added Matthias Wimmer for gabber.
	                         Added guikachu.

2001-03-24  Matthias Warkus  <mawarkus@gnome.org>

	* docs/gnome-de.sgml: Fixed, slight addition.

2001-03-21  Christian Meyer  <chrisime@gnome.org>

	* docs/gnome-de.sgml: Updated German policy.

2001-03-14  Christian Meyer  <chrisime@gnome.org>

	* admin/translator-list: Update.

2001-03-07  Christian Meyer  <chrisime@gnome.org>

	* docs/gnome-de.sgml: Again a huge update. But there are still some 
                              corrections necessary.

2001-03-03  Christian Meyer  <chrisime@gnome.org>

	* docs/gnome-de.sgml: Added several new strings.
			      Corrected some typos.
			      Changed umlauts to "&a/o/uuml;", etc. Please pay
			      attention in future.

2001-02-07  Karl Eichwalder  <ke@suse.de>

	* admin/translator-list: Update.

2001-02-05  Karl Eichwalder  <ke@suse.de>

	* docs/gnome-de.sgml: "Options", "Preferences", "Properties",
	"Settings".
	Adjust indentation (try to avoid lines longer than 79 chars).

2001-02-03  Karl Eichwalder  <ke@suse.de>

	* docs/gnome-de.sgml: Adjust "Try", "Apply", and Create.