@@ -1,0 +1,56 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html>
+<head>
+<title>Informationen zu GNOME 2.0</title>
+</head>
+<body>
+<h1>Was wird alles ben&ouml;tigt?</h1>
+<p>Um GNOME 2.0 erfolgreich zu compilieren braucht man einerseits viel Geduld, andererseits eine stattliche Anzahl von Bibliotheken.
+Bevor man &uuml;berhaupt anf&auml;ngt, sollte man sich vergewissern, ob folgende Pakete auf dem System installliert sind:
+<li>autoconf 2.52</li>
+<li>automake 1.5</li>
+<li>gettext 0.10.40</li>
+<li>intltool 0.22</li>
+<li>pkgconfig 0.12</li>
+<li>popt 1.6.4</li>
+<li>zlib 1.1.3 (besser ist 1.1.4 wegen der Sicherheitsl&uuml;cke in Version 1.1.3)</li>
+<li>libungif 4.1.0b1</li>
+<li>libpng 1.0.12 (1.2.x funktionniert meines Wissens nicht)</li>
+<li>libjpeg 6b</li>
+<li>audiofile 0.2.3</li>
+<li>esound 0.2.27</li>
+</p>
+<p>Als erstes m&uuml;ssen ein paar Variablen exportiert werden. F&uuml;r die bash als Standardshell gibt man folgendes ein:
+<li>export GNOME2_PATH=/Pfad/zu/GNOME2</li>
+<li>export LD_LIBRARY_PATH=$GNOME2_PATH/lib:$LD_LIBRARY_PATH</li>
+<li>export PATH=$GNOME2_PATH/bin:$PATH</li>
+<li>export PKG_CONFIG_PATH=$LD_LIBRARY_PATH/pkgconfig</li>
+<li>export ACLOCAL_FLAGS="-I $GNOME2_PATH/share/aclocal"</li><br>
+Wenn der letzte export-Befehl nicht funktionniert dann den ganzen Pfad angeben, anstatt $GNOME2_PATH.
+</p>
+<p>Nun kommt es auf die exakte Reihenfolge an; gtk-doc muss nicht unbedingt compiliert werden. Dies spart sehr viel Zeit!</p>
+<em>gtk-doc, glib, atk, pango, gtk+, linc, libIDL, ORBit2, gnome-xml, libxslt, gnome-common, gnome-mime-data, gconf, bonobo-activation, libbonobo, gnome-vfs, libgnome, libart_lgpl, libglade, libgnomecanvas, libbonoboui, libgnomeui, libgnomeprint, libgnomeprintui, libwnck, libzvt, gnome-desktop, gnome-panel, gnome-session, profterm, gnome-utils, gail, libgtkhtml2, gnome-applets, gnome-control-center, gnome-games, gnome-media, librsvg, eel, nautilus, gconf-editor, yelp, bug-buddy, metacity</em>
+<p>Sawfish ist meiner Meinung nach noch nicht sonderlich gut, deshalb habe ich hier metacity aufgef&uuml;hrt.</p>
+<p>Man kann alle Pakete ohne besondere Optionen compilieren. Bei glib und gtk+ gibt es allerdings ein paar Dinge, die interessant sind (z.B. --enable-threads)</p>
+<p>N&auml;chster Schritt: Anlegen ein .xinitrc Datei in /home/USER.<br>
+Die Datei sollte folgendes beinhalten:
+<ul>
+<li>export PATH=/Pfad/zu/GNOME/bin:$PATH</li>
+<li>export LD_LIBRARY_PATH=/Pfad/zu/GNOME/lib</li>
+<li>export GDK_USE_XFT=1</li>
+<li>exec /Pfad/zu/bin/gnome-session</li>
+</ul>
+</p>
+<p>N&uuml;tzliche URLs:
+<li><a href="http://developer.gnome.org/">developer.gnome.org</a></li>
+<li><a href="http://www.gnome.org/projects/nautilus/">Nautilus Homepage</a></li>
+<li><a href="http://www.gnome.org/gnome-office/">GNOME Office</a></li>
+<li><a href="http://cvs.gnome.org/">GNOME CVS</a></li><br>
+<em>Um sich Pakete aus dem CVS laden zu k&ouml;nnen muss man folgende Variable
+exportieren: CVSROOT=:pserver:anonymous@anoncvs.gnome.org:/cvs/gnome</em><br>
+Danach gibt man <em>cvs login</em> ein und dr&uuml;ckt &lt;RETURN&gt;.
+</p>
+<hr align="center" size="2">
+Falls sich ein Fehler eingeschlichen haben sollte, oder es sonst noch Fragen gibt, bitte ich Euch mir eine <a href="mailto:chrisime@gnome.org">Mail</a> zu schreiben. Viel Spa&szlig; beim Paketebasteln. :-)
+</body>
+</html>
