@@ -1,3 +1,7 @@
+2002-06-13  Christian Meyer  <chrisime@gnome.org>
+
+	* docs/gnome2.html: Added. Describes how to compile Gnome2.
+
 2002-05-07  Christian Meyer  <chrisime@gnome.org>
 
 	* db/common.php: Update from Manuel so that a line breaks after 40
